--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
 #±æµÿ≈‰÷√
 #spring.profiles.active=native
 spring.cloud.config.server.git.uri=https://github.com/Glorings/configproperties.git
-spring.cloud.config.server.git.username=18668465735@163.com
-spring.cloud.config.server.git.password=wj@248624.
+spring.cloud.config.server.git.username=*******
+spring.cloud.config.server.git.password=*******
 spring.cloud.config.server.git.force-pull=true
